Issue#1. Fix style.css Remove partials/*. Replace with partial files one by one.

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,1 +1,6 @@
-@import "partials/*";
+@import "partials/base";
+@import "partials/content";
+@import "partials/footer";
+@import "partials/global";
+@import "partials/header";
+@import "partials/menu";
