Issue #4. Upadate variable names. Replace montserrat font with Merriweather.

--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -1,6 +1,6 @@
 /* Fonts. */
-$primary-font:'Montserrat', sans-serif;
-$secondary-font:'Open Sans', sans-serif;
+$title-font:'Merriweather', serif;;
+$text-font:'Open Sans', sans-serif;
 
 /* Colors. */
 $primary-color: #39aade;
