--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,7 +1,7 @@
 @import "partials/base";
 @import "partials/global";
+@import "partials/form";
 @import "partials/content";
 @import "partials/footer";
 @import "partials/header";
 @import "partials/menu";
-
