--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -11,6 +11,10 @@ $tertiary-color: #323648;
 $primary-bg: #ffffff;
 $secondary-bg: #f5f5f5;
 
+/*Hover color */
+$submit-btn-hover: #b07337;
+$submit-font-color: #000;
+
 /* Base font size. */
 $base-font-size: 16px;
 /* Convert pixels to ems. */
