--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -4,16 +4,19 @@ $text-font: Open Sans, sans-serif;
 
 /* Colors. */
 $primary-color: #39aade;
-$secondary-color: #b97a47;
+$secondary-color: #cd853f;
 $tertiary-color: #323648;
 
 /* Background colors. */
-$primary-bg: #ffffff;
+$primary-bg: #fff;
 $secondary-bg: #f5f5f5;
 
-/*Hover color */
+/* Hover color. */
 $submit-btn-hover: #b07337;
 $submit-font-color: #000;
+
+/* Border bottom color. */
+$border-btn-color: #e6e6fa;
 
 /* Base font size. */
 $base-font-size: 16px;
