--- a/static/sass/partials/_form.scss
+++ b/static/sass/partials/_form.scss
@@ -1,23 +1,26 @@
-/* SASS file for form. */
+// SASS file for form. 
 form {
   font-family: $text-font;
   .form-wrapper {
     padding-left: 0;
     padding-right: 0;
-    .col-xs-8,
-    .col-xs-4 {
+    .col-8,
+    .col-4 {
       padding-left: 0;
       padding-right: 0;
     }
-    .col-xs-8 {
+
+    .col-8 {
       text-align: left;
     }
+
     .input-text {
       font-size: $base-font-size;
       border: 1px solid $secondary-color;
       padding: 6px;
       width: 95%;
     }
+
     .submit-btn {
       font-size: $base-font-size;
       background: $secondary-color;
@@ -25,7 +28,9 @@ form {
       border: none;
       padding: 7px;
       width: 100%;
+      float: right;
     }
+    
     .submit-btn:hover {
       background-color: $submit-btn-hover;
       color: $submit-font-color;
