--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ h1, h2, h3, h4, h5 {
   font-family: Merriweather, serif; }
 
 h1 {
-  font-size: 2.5;
+  font-size: 2.5em;
   text-align: center;
   margin-bottom: 30px;
   font-weight: bold; }
@@ -15,18 +15,18 @@ p {
 
 @media (min-width: 1024px) {
   h1 {
-    font-size: 3.75; } }
+    font-size: 3.75em; } }
 
 form {
   font-family: Open Sans, sans-serif; }
   form .form-wrapper {
     padding-left: 0;
     padding-right: 0; }
-    form .form-wrapper .col-8,
+    form .form-wrapper .col-7,
     form .form-wrapper .col-4 {
       padding-left: 0;
       padding-right: 0; }
-    form .form-wrapper .col-8 {
+    form .form-wrapper .col-7 {
       text-align: left; }
     form .form-wrapper .input-text {
       font-size: 16px;
@@ -132,10 +132,15 @@ header .sitename-wrapper {
       float: right; }
 
 header .logo {
-  text-align: center;
-  margin-top: 40px; }
-  header .logo img {
-    height: 350px; }
+  margin: auto;
+  margin-top: 50px;
+  width: 353px;
+  height: 530px;
+  background: url("../images/Official_logo.jpg"); }
+  @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+    header .logo {
+      background-image: url("../images/Official_logo2x.jpg");
+      background-size: 353px 530px; } }
 
 header .description {
   margin-top: 40px; }
@@ -145,8 +150,6 @@ header .description {
     display: none; }
   header .sitename-wrapper span {
     padding-left: 40px; }
-  header .logo img {
-    height: 400px; }
   header .description p {
     font-size: 18px; } }
 
@@ -157,8 +160,6 @@ header .description {
     display: none; }
   header .sitename-wrapper span {
     padding-left: 60px; }
-  header .logo img {
-    height: 500px; }
   header h1 {
     font-size: 43px; }
   header .description p {
@@ -196,8 +197,6 @@ header .description {
         padding: 10px;
         padding-right: 15px;
         padding-left: 15px; }
-  header .logo img {
-    height: 550px; }
   header h1 {
     font-size: 50px; }
   header .description p {
@@ -208,8 +207,6 @@ header .description {
     font-size: 18px; } }
 
 @media (min-width: 1024px) {
-  header .logo img {
-    height: 600px; }
   header h1 {
     font-size: 60px; }
   header .description p {
