Issue #19. Create sponsors region on content area.

--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -9,7 +9,7 @@ $tertiary-color: #323648;
 
 // Background colors.
 $primary-bg: #fff;
-$secondary-bg: #f5f5f5;
+$secondary-bg: #ebebeb;
 
 // Hover color.
 $submit-btn-hover: #b07337;
