--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,35 @@ form {
       background-color: #b07337;
       color: #000; }
 
+.content-wrapper {
+  background-color: #ebebeb; }
+  .content-wrapper img {
+    width: 35%;
+    text-align: center; }
+  .content-wrapper p {
+    text-align: center; }
+  .content-wrapper h2 {
+    text-align: center; }
+  .content-wrapper h4 {
+    text-align: center; }
+  .content-wrapper .button {
+    text-align: center; }
+    .content-wrapper .button .sponsor-button {
+      text-transform: uppercase;
+      font-size: 15px;
+      font-weight: bold;
+      font-family: Open Sans, sans-serif;
+      color: #cd853f;
+      border: 1px solid #cd853f;
+      border-radius: 10px;
+      border-color: #cd853f;
+      padding: 20px;
+      background-color: transparent;
+      padding-left: 30px;
+      padding-right: 30px; }
+  .content-wrapper .sponsors-image {
+    text-align: center; }
+
 header .sitename-wrapper {
   border-bottom: 0.2px solid #e6e6fa; }
   header .sitename-wrapper .desktop-menu {
