Issue #19. Update the size of the main image. Remove empty class.

--- a/static/sass/partials/_content.scss
+++ b/static/sass/partials/_content.scss
@@ -1,41 +1,47 @@
+.content{
+  padding-top: 40px;
+}
 .content-wrapper{
   background-color: $secondary-bg;
-  img{
-    width: 35%;
-    text-align: center;
-  }
-
-  p{
-    text-align: center;
-  }
-
-  h2{
-    text-align: center;
-  }
-
-  h4{
-    text-align: center;
-  }
-
-  .button{
-    text-align: center;
-    .sponsor-button{
-      text-transform: uppercase;
-      font-size: 15px;
-      font-weight: bold;
-      font-family: $text-font;
-      color: $secondary-color;
-      border: 1px solid $secondary-color;;
-      border-radius: 10px;
-      border-color: $secondary-color;
-      padding: 20px;
-      background-color: transparent;
-      padding-left: 30px;
-      padding-right: 30px;
+  .content-wrapper2{
+    h2{
+      text-align: center;
+      margin: 50px;
+      margin-bottom: 15px;
+      font-weight: bolder;
     }
-  }
 
-  .sponsors-image{
-    text-align: center;
+    p{
+      text-align: center;
+    }
+
+   .button{
+      text-align: center;
+      .sponsor-button{
+        text-transform: uppercase;
+        font-size: 15px;
+        font-weight: bold;
+        font-family: $text-font;
+        color: $secondary-color;
+        border: 1px solid $secondary-color;;
+        border-radius: 10px;
+        border-color: $secondary-color;
+        padding: 20px;
+        background-color: transparent;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin: 40px;
+        margin-bottom: 70px;
+      }
+    }
+
+    h4{
+      text-align: center;
+    }
+
+    .sponsors-image{
+      text-align: center;
+      margin-bottom: 50px;
+    }
   }
 }
