--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,20 +45,21 @@ form {
       background-color: #b07337;
       color: #000; }
 
+.content {
+  padding-top: 40px; }
+
 .content-wrapper {
   background-color: #ebebeb; }
-  .content-wrapper img {
-    width: 35%;
+  .content-wrapper .content-wrapper2 h2 {
+    text-align: center;
+    margin: 50px;
+    margin-bottom: 15px;
+    font-weight: bolder; }
+  .content-wrapper .content-wrapper2 p {
     text-align: center; }
-  .content-wrapper p {
+  .content-wrapper .content-wrapper2 .button {
     text-align: center; }
-  .content-wrapper h2 {
-    text-align: center; }
-  .content-wrapper h4 {
-    text-align: center; }
-  .content-wrapper .button {
-    text-align: center; }
-    .content-wrapper .button .sponsor-button {
+    .content-wrapper .content-wrapper2 .button .sponsor-button {
       text-transform: uppercase;
       font-size: 15px;
       font-weight: bold;
@@ -70,9 +71,14 @@ form {
       padding: 20px;
       background-color: transparent;
       padding-left: 30px;
-      padding-right: 30px; }
-  .content-wrapper .sponsors-image {
+      padding-right: 30px;
+      margin: 40px;
+      margin-bottom: 70px; }
+  .content-wrapper .content-wrapper2 h4 {
     text-align: center; }
+  .content-wrapper .content-wrapper2 .sponsors-image {
+    text-align: center;
+    margin-bottom: 50px; }
 
 header .sitename-wrapper {
   border-bottom: 0.2px solid #e6e6fa; }
