--- a/static/sass/partials/_global.scss
+++ b/static/sass/partials/_global.scss
@@ -17,6 +17,29 @@ p {
   margin-bottom: 20px;
 }
 
+.link-btn {
+  a {
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: $text-font;
+    color: $secondary-color;
+    text-decoration: none;
+    border: 1px solid $primary-bg;
+    background-color: transparent;
+    border-color: $secondary-color;
+    border-radius: 10px;
+    padding: 25px;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+
+  a:hover {
+    color:$primary-bg;
+    background-color: $submit-btn-hover;
+  }
+}
+
 @media (min-width: 1024px) {
   h1 {
     font-size: pxtoem(60px);
