Issue #19. Rename class content-wrapper2 to sponsor-region.

--- a/static/sass/partials/_content.scss
+++ b/static/sass/partials/_content.scss
@@ -3,7 +3,7 @@
 }
 .content-wrapper {
   background-color: $secondary-bg;
-  .content-wrapper2 {
+  .sponsor-region {
     h2 {
       text-align: center;
       margin: 50px;
