--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,19 +69,192 @@ form {
 
 .content-wrapper {
   background-color: #ebebeb; }
-  .content-wrapper .content-wrapper2 h2 {
+  .content-wrapper .sponsor-region h2 {
     text-align: center;
     margin: 50px;
     margin-bottom: 15px;
     font-weight: bolder; }
-  .content-wrapper .content-wrapper2 p {
+  .content-wrapper .sponsor-region p {
     text-align: center; }
-  .content-wrapper .content-wrapper2 .link-btn {
+  .content-wrapper .sponsor-region .link-btn {
     text-align: center;
     margin: 70px;
     margin-bottom: 95px; }
-  .content-wrapper .content-wrapper2 h4 {
+  .content-wrapper .sponsor-region h4 {
     text-align: center; }
-  .content-wrapper .content-wrapper2 .sponsors-image {
+  .content-wrapper .sponsor-region .sponsors-image {
     text-align: center;
     margin-bottom: 50px; }
+
+header .sitename-wrapper {
+  border-bottom: 0.2px solid #e6e6fa; }
+  header .sitename-wrapper .desktop-menu {
+    display: none; }
+  header .sitename-wrapper .text-logo {
+    text-transform: uppercase;
+    text-align: left;
+    margin: 15px 0 22px 0;
+    font-family: Open Sans, sans-serif;
+    padding-top: 4px;
+    margin-left: 5px; }
+    header .sitename-wrapper .text-logo a {
+      font-size: 28px;
+      font-weight: bold;
+      color: #39aade;
+      text-decoration: none; }
+    header .sitename-wrapper .text-logo .text-logo-second {
+      color: #cd853f;
+      padding: 0; }
+  header .sitename-wrapper span {
+    margin-top: 17px;
+    padding-left: 27px; }
+  header .sitename-wrapper .menu-wrapper {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #39aade;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 0px;
+    text-align: center; }
+    header .sitename-wrapper .menu-wrapper .close-button {
+      font-size: 45px;
+      float: right;
+      padding: 0px; }
+      header .sitename-wrapper .menu-wrapper .close-button a {
+        text-decoration: none;
+        color: #fff; }
+    header .sitename-wrapper .menu-wrapper ul.menu-list {
+      list-style-type: none;
+      display: block;
+      font-size: 25px;
+      text-align: left;
+      padding: 0px;
+      margin-top: 80px;
+      margin-bottom: 0;
+      width: 100%;
+      text-transform: capitalize; }
+      header .sitename-wrapper .menu-wrapper ul.menu-list a {
+        text-decoration: none;
+        color: #fff;
+        font-family: Open Sans, sans-serif;
+        display: block;
+        padding: 7px;
+        padding-left: 40px;
+        padding-bottom: 10px; }
+      header .sitename-wrapper .menu-wrapper ul.menu-list a:hover {
+        color: #fff; }
+      header .sitename-wrapper .menu-wrapper ul.menu-list li {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
+      header .sitename-wrapper .menu-wrapper ul.menu-list li:hover {
+        background-color: rgba(255, 255, 255, 0.2); }
+    header .sitename-wrapper .menu-wrapper .register-button {
+      text-transform: capitalize; }
+      header .sitename-wrapper .menu-wrapper .register-button a {
+        font-size: 25px;
+        font-family: Open Sans, sans-serif;
+        color: #fff;
+        text-decoration: none;
+        border: 1px solid #fff;
+        background-color: #cd853f;
+        padding: 8px;
+        padding-right: 60px;
+        padding-left: 60px;
+        border-color: #cd853f; }
+      header .sitename-wrapper .menu-wrapper .register-button a:hover {
+        color: #fff;
+        background-color: #b07337; }
+  header .sitename-wrapper .mobile-menu {
+    width: 100%; }
+    header .sitename-wrapper .mobile-menu span.hamburger {
+      float: right; }
+
+header .logo {
+  margin: auto;
+  margin-top: 50px;
+  width: 353px;
+  height: 530px;
+  background: url("../images/Official_logo.jpg"); }
+  @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+    header .logo {
+      background-image: url("../images/Official_logo2x.jpg");
+      background-size: 353px 530px; } }
+
+header .description {
+  margin-top: 40px; }
+
+@media (min-width: 640px) {
+  header .sitename-wrapper .desktop-menu {
+    display: none; }
+  header .sitename-wrapper span {
+    padding-left: 40px; }
+  header .description p {
+    font-size: 18px; } }
+
+@media (min-width: 768px) {
+  header .sitename-wrapper .menu-wrapper .close-button {
+    padding-left: 30px; }
+  header .sitename-wrapper .desktop-menu {
+    display: none; }
+  header .sitename-wrapper span {
+    padding-left: 60px; }
+  header h1 {
+    font-size: 43px; }
+  header .description p {
+    font-size: 22px; }
+  header .description .input-text {
+    font-size: 15px;
+    padding: 8px; }
+  header .description .submit-btn {
+    font-size: 15px;
+    padding: 9px; } }
+
+@media (min-width: 992px) {
+  header .sitename-wrapper .mobile-menu {
+    display: none; }
+  header .sitename-wrapper .desktop-menu {
+    display: block; }
+    header .sitename-wrapper .desktop-menu ul.menu-list {
+      list-style-type: none;
+      text-transform: capitalize;
+      float: right; }
+      header .sitename-wrapper .desktop-menu ul.menu-list li {
+        display: inline-block;
+        padding-right: 30px;
+        padding-top: 27PX; }
+        header .sitename-wrapper .desktop-menu ul.menu-list li a {
+          font-family: Open Sans, sans-serif;
+          color: #323648;
+          font-size: 19px; }
+        header .sitename-wrapper .desktop-menu ul.menu-list li a:hover {
+          text-decoration: none;
+          color: #cd853f; }
+      header .sitename-wrapper .desktop-menu ul.menu-list li.register-button {
+        border: 0.5px solid #cd853f;
+        text-align: center;
+        padding: 10px;
+        padding-right: 15px;
+        padding-left: 15px; }
+  header h1 {
+    font-size: 50px; }
+  header .description p {
+    font-size: 25px; }
+  header .description .input-text {
+    font-size: 18px; }
+  header .description .submit-btn {
+    font-size: 18px; } }
+
+@media (min-width: 1024px) {
+  header h1 {
+    font-size: 60px; }
+  header .description p {
+    font-size: 25px; }
+  header .description .input-text {
+    font-size: 20px;
+    padding: 10px; }
+  header .description .submit-btn {
+    font-size: 20px;
+    padding: 11px; } }
