--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -10,6 +10,8 @@ $tertiary-color: #323648;
 // Background colors.
 $primary-bg: #fff;
 $secondary-bg: #f5f5f5;
+$footer-bottom-bg: #0f457b;
+$footer-top-bg: #51a3d6;
 
 // Hover color.
 $submit-btn-hover: #b07337;
