Issue #19. Create an alt for Promet source logo. Fix indentation issue on html. Move the style for humburger in sass.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,7 +170,9 @@ header .sitename-wrapper {
   header .sitename-wrapper .mobile-menu {
     width: 100%; }
     header .sitename-wrapper .mobile-menu span.hamburger {
-      float: right; }
+      float: right;
+      font-size: 30px;
+      cursor: pointer; }
 
 header .logo {
   margin: auto;
