--- a/static/sass/partials/_header.scss
+++ b/static/sass/partials/_header.scss
@@ -111,6 +111,8 @@ header {
       width: 100%;
       span.hamburger{
         float: right;
+        font-size: 30px;
+        cursor: pointer;
       }
     }
   }
