--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,8 +75,7 @@ form {
     margin-bottom: 15px;
     font-weight: bolder; }
   .content-wrapper .sponsor-region p {
-    text-align: center;
-    text-align: left; }
+    text-align: center; }
   .content-wrapper .sponsor-region .link-btn {
     text-align: center;
     margin: 70px;
